[metadata]
name = ibm-vpc-img-inst
version = 1.0.0b1
author = Omer J Cohen
author_email = cohen.j.omer@gmail.com
description = Produces IBM-VPC custom image in users account with an installed tool of their choosing      
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<PLACEHOLDER>/ibm-vpc-img-inst
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts =
    bin/ibm-vpc-img-inst
install_requires =
    click==8.0.4
    ibm_cloud_sdk_core==3.16.0
    ibm_platform_services==0.27.0
    ibm_vpc==0.12.0
    ibm_watson==6.1.0
    inquirer==2.10.1
    paramiko==2.11.0
    PyYAML==6.0
    setuptools==63.2.0

[options.packages.find]
where = src

[options.package_data]
* = *.yaml
